--- a/formulario.ui
+++ b/formulario.ui
@@ -350,6 +350,7 @@ color: rgb(255, 255, 255);</string>
       <weight>75</weight>
       <bold>true</bold>
      </font>
+     <!--@jhow-->
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 255, 255);</string>
