--- a/lista.ui
+++ b/lista.ui
@@ -34,6 +34,7 @@
     </property>
     <property name="font">
      <font>
+     <!--@jhow-->
       <pointsize>15</pointsize>
       <weight>75</weight>
       <bold>true</bold>
